--- a/index.html
+++ b/index.html
@@ -41,8 +41,7 @@
             <h3 class="my-4"><b></b></h3>
 
             <!-- VSL -->
-            <script type="text/javascript" id="scr_6226ac18aa8f7e000965d88e">var s=document.createElement("script");s.src="https://cdn.converteai.net/8b03b5e9-1e95-4b45-9063-037ac9b350ab/players/6226ac18aa8f7e000965d88e/player.js",s.async=!0,document.head.appendChild(s);</script>
-
+            <div id="vid_65b02cff638a2a000924eba6" style="position:relative;width:100%;padding: 56.33802816901409% 0 0;"><img id="thumb_65b02cff638a2a000924eba6" src="https://images.converteai.net/fdc2d458-84c5-435b-8986-35d3db8eb5e8/players/65b02cff638a2a000924eba6/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_65b02cff638a2a000924eba6" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_65b02cff638a2a000924eba6">var s=document.createElement("script");s.src="https://scripts.converteai.net/fdc2d458-84c5-435b-8986-35d3db8eb5e8/players/65b02cff638a2a000924eba6/player.js",s.async=!0,document.head.appendChild(s);</script>
            
 
             <!-- Termos de Uso e Política de Privacidade -->
@@ -62,3 +61,21 @@
     <script src="./assets/js/com.js"></script>
   </body>
 </html>
+
+<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '2019265171775871');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=2019265171775871&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
