--- a/index.html
+++ b/index.html
@@ -38,11 +38,10 @@
             
 
             <!-- Headline -->
-            <h3 class="my-4"><b>Doutora Patricia Nascida no Japão: Revela o Segredo Das Famosas Para Ficar com o Corpo Violão! (Clique na aula abaixo e assista)</b></h3>
+            <h3 class="my-4"><b></b></h3>
 
             <!-- VSL -->
-            <div id="vid_65b02cff638a2a000924eba6" style="position:relative;width:100%;padding: 56.33802816901409% 0 0;"><img id="thumb_65b02cff638a2a000924eba6" src="https://images.converteai.net/fdc2d458-84c5-435b-8986-35d3db8eb5e8/players/65b02cff638a2a000924eba6/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_65b02cff638a2a000924eba6" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_65b02cff638a2a000924eba6">var s=document.createElement("script");s.src="https://scripts.converteai.net/fdc2d458-84c5-435b-8986-35d3db8eb5e8/players/65b02cff638a2a000924eba6/player.js",s.async=!0,document.head.appendChild(s);</script>
-           
+<div id="vid_65c8d6b39562ea0008ffa64d" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_65c8d6b39562ea0008ffa64d" src="https://images.converteai.net/7476c756-18b1-4633-9a0e-318ee826f155/players/65c8d6b39562ea0008ffa64d/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_65c8d6b39562ea0008ffa64d" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_65c8d6b39562ea0008ffa64d">var s=document.createElement("script");s.src="https://scripts.converteai.net/7476c756-18b1-4633-9a0e-318ee826f155/players/65c8d6b39562ea0008ffa64d/player.js",s.async=!0,document.head.appendChild(s);</script>           
 
             <!-- Termos de Uso e Política de Privacidade -->
             <div class="text-white mt-4"><a href="termos.html" class="text-white">Termos de Uso</a> | <a href="privacidade.html" class="text-white">Política de Privacidade</a></div>
