--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
             <h3 class="my-4"><b></b></h3>
 
             <!-- VSL -->
-<div id="vid_65e38bb2fe98df00089ac2c2" style="position:relative;width:100%;padding: 56.25% 0 0;"><img id="thumb_65e38bb2fe98df00089ac2c2" src="https://images.converteai.net/2c0b5f27-a2c7-4bd9-9f4f-8aa206f31166/players/65e38bb2fe98df00089ac2c2/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"><div id="backdrop_65e38bb2fe98df00089ac2c2" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div></div><script type="text/javascript" id="scr_65e38bb2fe98df00089ac2c2">var s=document.createElement("script");s.src="https://scripts.converteai.net/2c0b5f27-a2c7-4bd9-9f4f-8aa206f31166/players/65e38bb2fe98df00089ac2c2/player.js",s.async=!0,document.head.appendChild(s);</script>            <div class="text-white mt-4"><a href="termos.html" class="text-white">Termos de Uso</a> | <a href="privacidade.html" class="text-white">Política de Privacidade</a></div>
+
+          <div id="vid_65f0bd1fe85fb0000914b297" style="position:relative;width:100%;padding: 56.25% 0 0;"> <img id="thumb_65f0bd1fe85fb0000914b297" src="https://images.converteai.net/2c0b5f27-a2c7-4bd9-9f4f-8aa206f31166/players/65f0bd1fe85fb0000914b297/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"> <div id="backdrop_65f0bd1fe85fb0000914b297" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div> </div> <script type="text/javascript" id="scr_65f0bd1fe85fb0000914b297"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/2c0b5f27-a2c7-4bd9-9f4f-8aa206f31166/players/65f0bd1fe85fb0000914b297/player.js", s.async=!0,document.head.appendChild(s); </script>
+          
           </div>
         </div>
       </div>
