--- a/Downsell/index.html
+++ b/Downsell/index.html
@@ -1,16 +1,1 @@
-<div id="vid_6601ddaef3066e00085925d3" style="position:relative;width:100%;padding: 56.25% 0 0;"> <img id="thumb_6601ddaef3066e00085925d3" src="https://images.converteai.net/d393295c-4f2d-4c80-a86f-e04d6b9dab14/players/6601ddaef3066e00085925d3/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"> <div id="backdrop_6601ddaef3066e00085925d3" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div> </div> <script type="text/javascript" id="scr_6601ddaef3066e00085925d3"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/d393295c-4f2d-4c80-a86f-e04d6b9dab14/players/6601ddaef3066e00085925d3/player.js", s.async=!0,document.head.appendChild(s); </script>
-
-<!-- HOTMART - Upsell Widget -->
-<div id="box_hotmart"></div>
-<script src="https://pay.hotmart.com/assets/js/hotmart.upsell_checkout.js"></script>
-
-<script>
-opts = {
-key: 'USL-140173-467314-631809927b6bd3c647f75bfdb2fadef9',
-width: '650' ,
-height: '420'
-};
-Upsell.Widget.show(opts);
-</script>
-<!-- HOTMART - Upsell Widget [end] -->
-
+<div id="vid_665070cb56e927000b61d23d" style="position:relative;width:100%;padding: 56.25% 0 0;"> <img id="thumb_665070cb56e927000b61d23d" src="https://images.converteai.net/373fdd0d-2334-4f1e-92c3-118564040d7c/players/665070cb56e927000b61d23d/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"> <div id="backdrop_665070cb56e927000b61d23d" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div> </div> <script type="text/javascript" id="scr_665070cb56e927000b61d23d"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/373fdd0d-2334-4f1e-92c3-118564040d7c/players/665070cb56e927000b61d23d/player.js", s.async=!0,document.head.appendChild(s); </script> <style> .elementor-element:has(#smartplayer) { width: 100%; } </style>
