--- a/index.html
+++ b/index.html
@@ -1,1 +1,18 @@
-<div id="vid_665f98a1d9e609000bd404c6" style="position:relative;width:100%;padding: 100% 0 0;"> <img id="thumb_665f98a1d9e609000bd404c6" src="https://images.converteai.net/373fdd0d-2334-4f1e-92c3-118564040d7c/players/665f98a1d9e609000bd404c6/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"> <div id="backdrop_665f98a1d9e609000bd404c6" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div> </div> <script type="text/javascript" id="scr_665f98a1d9e609000bd404c6"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/373fdd0d-2334-4f1e-92c3-118564040d7c/players/665f98a1d9e609000bd404c6/player.js", s.async=!0,document.head.appendChild(s); </script> <style> .elementor-element:has(#smartplayer) { width: 100%; } </style>
+<div id="vid_66808a9458521d000b18d85d" style="position:relative;width:100%;padding: 56.36743215031316% 0 0;"> <img id="thumb_66808a9458521d000b18d85d" src="https://images.converteai.net/52dd16ab-8e8b-498e-8aee-bd3cc9394301/players/66808a9458521d000b18d85d/thumbnail.jpg" style="position:absolute;top:0;left:0;width:100%;height:100%;object-fit:cover;display:block;"> <div id="backdrop_66808a9458521d000b18d85d" style="position:absolute;top:0;width:100%;height:100%;-webkit-backdrop-filter:blur(5px);backdrop-filter:blur(5px);"></div> </div> <script type="text/javascript" id="scr_66808a9458521d000b18d85d"> var s=document.createElement("script"); s.src="https://scripts.converteai.net/52dd16ab-8e8b-498e-8aee-bd3cc9394301/players/66808a9458521d000b18d85d/player.js", s.async=!0,document.head.appendChild(s); </script> <style> .elementor-element:has(#smartplayer) { width: 100%; } </style>
+<!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '3745498215714776');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=3745498215714776&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
