--- a/index.html
+++ b/index.html
@@ -22,11 +22,7 @@
 			<img src="./images/site-logo.png" alt="site logo">
 			<div class="main-navigation">
 				<ul class="main-navigation__ul">
-					<li><a href="#">Homepage</a></li>
-					<li><a href="#">Page 1</a></li>
-					<li><a href="#">Page 2</a></li>
-					<li><a href="#">Page 3</a></li>
-					<li><a href="#">Page 4</a></li>
+					
 				</ul>
 			</div>
 			<div id="myBtn" class="burger-container" onclick="myFunction(this)">
@@ -52,8 +48,8 @@
 			</div>
 			<div class="top-banner__text">
 				<div class="top-banner__text-up">
-					<span class="brand-span">Hello! I'm</span>
-					<h2 class="top-banner__h2">Jhone</h2>
+					<span class="brand-span">fsfasfasd</span>
+					<h2 class="top-banner__h2">msdfsafas</h2>
 				</div>
 				<div class="top-banner__text-down">
 					<h2 class="top-banner__h2">Smith</h2>
