--- a/index.html
+++ b/index.html
@@ -18,48 +18,69 @@
 			<div id="page-wrapper">
 
 				<!-- Header -->
-					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
-						<nav id="nav">
-							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
-									<div id="menu">
-										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</nav>
-					</header>
+<header id="header" class="alt">
+    <h1><a href="index.html">Pack Canva Para Nutricionistas</a></h1>
+    <nav id="nav">
+        <ul>
+            <li class="special">
+                <a href="https://pay.hotmart.com/K81957511C?checkoutMode=10" class="button primary">Comprar Ahora</a>
+            </li>
+        </ul>
+    </nav>
+</header>
+
+<style>
+    /* Estilo do botão de compra */
+    .button {
+        display: inline-block;
+        padding: 10px 20px;
+        font-size: 16px;
+        color: #fff;
+        background-color: #ffcc00; /* Cor amarelo dourado */
+        text-decoration: none;
+        border-radius: 5px;
+        transition: background-color 0.3s ease;
+        text-align: center;
+    }
+
+    .button.primary:hover {
+        background-color: #e6b800; /* Cor mais escura ao passar o mouse */
+    }
+
+    /* Estilos responsivos */
+    @media (max-width: 768px) {
+        .button {
+            width: 100%;
+            padding: 15px 0;
+            font-size: 18px;
+        }
+    }
+</style>
 
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Spectral</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
+							<h2>+ DE 300 PACKS CANVA PARA NUTRICIONISTAS</h2>
+							<p><br />
+							<br />
+							 <a href="https://pay.hotmart.com/K81957511C?checkoutMode=10"></a>¡Para que puedas atraer más clientes y mantener tu agenda llena!</p>
 							<ul class="actions special">
-								<li><a href="#" class="button primary">Activate</a></li>
+								<li><a href="https://pay.hotmart.com/K81957511C?checkoutMode=10" class="button primary">COMPRAR AHORA</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#one" class="more scrolly">QUIERO SABER MÁS</a>
 					</section>
 
 				<!-- One -->
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Beneficios del Paquete
+<br />
+							</h2>
+								<p>Con este paquete exclusivo de plantillas para nutricionistas, podrás destacar entre la competencia y crear un feed de Instagram atractivo y profesional.<br />
+								Cada plantilla está diseñada cuidadosamente para atraer a tu público objetivo y comunicar tus servicios de manera efectiva.
+Además, todas las plantillas son completamente editables en Canva, lo que te permite personalizar el contenido y adaptarlo a tu marca y estilo. ¡Ahorra tiempo y esfuerzo en la creación de tus publicaciones!</p>
 							</header>
 							<ul class="icons major">
 								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
@@ -73,16 +94,51 @@
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
 							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Destaca de la competencia con nuestras hermosas plantillas; <br />
+								El Canva Pack para Nutricionistas contiene más de 300 artes para tu FEED e STORIES, y es totalmente editable con Canva.</h2>
+							<p style="line-height: 1.6;">
+ <div class="checklist">
+    <div class="checklist-item">✅ 100 publicaciones para FEED</div>
+    <div class="checklist-item">✅ 100 publicaciones para HISTORIA</div>
+    <div class="checklist-item">✅ 50 publicaciones para FEED - Materno Infantil</div>
+    <div class="checklist-item">✅ 50 publicaciones para HISTORIA - Madre e Hijo</div>
+    <div class="checklist-item">✅ 15 publicaciones para HISTORIA DE BUENOS DÍAS</div>
+    <div class="checklist-item">✅ 08 publicaciones para HISTORIA ANIMADA</div>
+    <div class="checklist-item">✅ 10 publicaciones de CARRUSEL DE ALIMENTACIÓN</div>
+    <div class="checklist-item">✅ 12 posts FEED Bienvenidos Mes a Mes</div>
+    <div class="checklist-item">✅ 5 publicaciones FEED para la celebración de seguidores</div>
+    <div class="checklist-item">✅ 19 portadas para DESTACADOS</div>
+    <div class="checklist-item">✅ 10 portadas para DESTACADOS</div>
+    <div class="checklist-item">✅ Plantilla de tarjeta digital</div>
+    <div class="checklist-item">✅ Modelo de Tarjeta Digital – Información de Consulta</div>
+    <div class="checklist-item">✅ 03 Plantillas de Tarjetas de Presentación</div>
+    <div class="checklist-item">✅ 03 Plantillas de Tarjetas de Citas</div>
+    <div class="checklist-item">✅ 04 Plantillas de Prescripción</div>
+
+
+
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h3>NUTRICIÓN DEPORTIVA</h3>
+    <div class="checklist-item">✅ 50 publicaciones para FEED</div>
+    <div class="checklist-item">✅ 50 publicaciones para HISTORIA</div>
+    <div class="checklist-item">✅ 5 publicaciones de CARRUSEL DE ALIMENTACIÓN</div>
+    <div class="checklist-item">✅ Fundas DESTACADAS</div>
+    <div class="checklist-item">✅ Plantilla de tarjeta digital</div>
+    <div class="checklist-item">✅ Modelo de Tarjeta Digital - Información de Consulta</div>
+    <div class="checklist-item">✅ Plantilla de tarjeta de presentación</div>
+    <div class="checklist-item">✅ Plantilla de tarjeta de cita</div>
+    <div class="checklist-item">✅ Plantillas de prescripción</div>
+
+    <h3>SALUD DE LA MUJER</h3>
+    <div class="checklist-item">✅ 50 publicaciones para FEED</div>
+    <div class="checklist-item">✅ 50 publicaciones para HISTORIA</div>
+    <div class="checklist-item">✅ Plantilla de tarjeta digital</div>
+    <div class="checklist-item">✅ Modelo de Tarjeta Digital - Información de Consulta</div>
+    <div class="checklist-item">✅ Plantillas de recetas</div>
+</div>
 							</div>
 						</section>
 						<section class="spotlight">
@@ -148,14 +204,14 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="#" class="icon brands fa-twitter"><span class="label"></span></a></li>
+							<li><a href="#" class="icon brands fa-facebook-f"><span class="label"></span></a></li>
+							<li><a href="#" class="icon brands fa-instagram"><span class="label"></span></a></li>
+							<li><a href="#" class="icon brands fa-dribbble"><span class="label"></span></a></li>
+							<li><a href="#" class="icon solid fa-envelope"><span class="label"></span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>&copy; PACK CANVA NUTRI</li><li>RESERVADOS TODOS LOS DERECHOS <a href="https://pay.hotmart.com/K81957511C?checkoutMode=10"></a></li>
 						</ul>
 					</footer>
 
