--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 <header id="header" class="alt">
-    <h1><a href="index.html">Pack Canva Para Nutricionistas</a></h1>
+    <h1><a href="index.html">PACK CANVA PARA NUTRICIONISTAS</a></h1>
     <nav id="nav">
         <ul>
             <li class="special">
@@ -195,8 +195,8 @@ Además, todas las plantillas son completamente editables en Canva, lo que te pe
 								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="https://pay.hotmart.com/K81957511C?checkoutMode=10" class="button fit primary">Activate</a></li>
+								<li><a href="https://pay.hotmart.com/K81957511C?checkoutMode=10" class="button fit">Learn More</a></li>
 							</ul>
 						</div>
 					</section>
