--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
 
 				<!-- Header -->
 <header id="header" class="alt">
-    <h1><a href="index.html">PACK CANVA PARA NUTRICIONISTAS</a></h1>
+    <h1><a href="index.html">De$97 Por Solo $7Dolares </a></h1>
     <nav id="nav">
         <ul>
             <li class="special">
-                <a href="https://pay.hotmart.com/K81957511C?checkoutMode=10" class="button primary">Comprar Ahora</a>
+                <a href="https://pay.hotmart.com/K81957511C?checkoutMode=10" class="button primary">¡Sí quiero!</a>
             </li>
         </ul>
     </nav>
@@ -142,10 +142,27 @@ Además, todas las plantillas son completamente editables en Canva, lo que te pe
 							</div>
 						</section>
 						<section class="spotlight">
+							<div class="image"><img src="images/pic06.jpg" alt="" /></div><div class="content">
+								<h2>¿Por qué deberías adquirir nuestro Pack Canva totalmente editable?<br />
+								</h2>
+								<p>1-Personalización Rápida y Práctica
+¡Con nuestras plantillas listas para usar, puedes personalizarlas en minutos! Ahorra tiempo y mantén tu comunicación siempre actualizada y atractiva.</p>
+
+</p>2-Crea una Identidad Única
+Nuestros diseños son totalmente editables, lo que te permite agregar tu marca, colores y estilo personal. ¡Destácate y crea materiales que reflejen tu identidad profesional!</p>
+
+</p>3-Facilidad de Uso Garantizada
+La interfaz intuitiva de Canva hace que el uso sea simple y accesible, incluso para principiantes. Ofrecemos una guía paso a paso para ayudarte a familiarizarte rápidamente con las plantillas.</p>
+							</div>
+						</section>
+					</section>
+						</div>
+						</section>
+						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>Ya contamos +de 5 mil Nutricionistas<br />
+							</h2>
+								<p>¡Dile adiós al estrés y gana más tiempo para dedicarte a lo que realmente importa! sus clientes.</p>
 							</div>
 						</section>
 					</section>
@@ -154,34 +171,33 @@ Además, todas las plantillas son completamente editables en Canva, lo que te pe
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>¡Siéntete más seguro y confiado al crear contenido visual increíble para tus redes sociales!</h2>
+								<p>¡PONTE DELANTE DE TUS COMPAÑEROS DE TRABAJO! MIENTRAS PIERDEN EL TIEMPO CREANDO PUBLICACIONES, USTEDES ESTARÁN ATENIENDO A CLIENTES Y PACIENTES</p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>BONOS EXCLUSIVOS</h3>
+									<p>¿Creías que se había acabado? Por supuesto, no preparamos regalos para que uses en tus redes sociales y atraigas clientes en los próximos 6 meses.</p>
 								</li>
 								<li class="icon solid fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>+DE 300 PACKS</h3>
+									<p>Contamos con 30 diseñadores enfocados en la nutrición para que puedas tener el mejor material y hacer brillar los ojos de tus clientes..</p>
 								</li>
 								<li class="icon solid fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>PUBLICACIONES PARA INSTAGRAM</h3>
+									<p>Ya tenemos más de 100 publicaciones para que las uses inmediatamente en tu Instagram, donde están la mayoría de tus clientes.</p>
 								</li>
 								<li class="icon solid fa-headphones-alt">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>SOPORTE LAS 24 HORAS</h3>
+									<p>¿Tiene alguna pregunta? Sólo llámanos y te atenderemos lo antes posible.</p>
 								</li>
 								<li class="icon fa-heart">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>Garantía de 30 días</h3>
+									<p>Tiene 30 días para solicitar un reembolso; si no le gusta, simplemente solicite que le devuelvan su dinero y le reembolsaremos hasta el último centavo y seguiremos siendo amigos.</p>
 								</li>
 								<li class="icon fa-flag">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>FÁCIL Y RÁPIDO</h3>
+									<p>¿Quieres hacer algún cambio en la publicación? En caso contrario, simplemente haz clic en el texto o imagen, edita según tu gusto, guarda y ¡listo! sin burocracia..</p>
 								</li>
 							</ul>
 						</div>
@@ -191,12 +207,12 @@ Además, todas las plantillas son completamente editables en Canva, lo que te pe
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<h2>DE $97 POR SOLO $7,00 DOLARES </h2>
+								<p>¡LA PROMOCIÓN TERMINA EN 1 HORA!</p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="https://pay.hotmart.com/K81957511C?checkoutMode=10" class="button fit primary">Activate</a></li>
-								<li><a href="https://pay.hotmart.com/K81957511C?checkoutMode=10" class="button fit">Learn More</a></li>
+								<li><a href="https://pay.hotmart.com/K81957511C?checkoutMode=10" class="button fit primary">COMPRAR</a></li>
+								<li><a href="https://pay.hotmart.com/K81957511C?checkoutMode=10" class="button fit">PROMOCIÓN</a></li>
 							</ul>
 						</div>
 					</section>
