--- a/upsell/index.html
+++ b/upsell/index.html
@@ -3,12 +3,22 @@
 <head>
     <title>Meu Título</title>
     <style>
-        /* Aqui você colocará os estilos CSS */
+        h1 {
+            font-size: 5rem;
+            letter-spacing: 5px;
+            text-align: center;
+            margin-bottom: 2rem;
+        }
+
+        p {
+            text-align: justify;
+            line-height: 1.5;
+        }
     </style>
 </head>
 <body>
     <h1>Meu Título Grande e Espaçado</h1>
-    <p>Este é o primeiro parágrafo. Você pode adicionar mais parágrafos conforme necessário.</p>
+    <p>Este é o primeiro parágrafo. Você pode adicionar mais parágrafos conforme necessário. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     <p>Este é o segundo parágrafo.</p>
 </body>
 </html>
