--- a/gracias/index.html
+++ b/gracias/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>ESPERAR</title>
+		<title>GRACIAS TODOS LOS PRODUCTOS ADQUIRIDOS SERÁN ENVIADOS INMEDIATAMENTE A SU CORREO ELECTRÓNICO. ¡NO OLVIDES REVISAR TU BANDEJA DE SPAM! =)</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,160 +16,4 @@
 
 	
 
-				<!-- One -->
-					<section id="one" class="wrapper style1 special">
-						<div class="inner">
-							<header class="major">
-								<h2>¡ESPERAR! <br />
-								¡No vuelvas a hacer clic, esto puede causar errores en tu pedido!</h2>
-								<p><p>¿Y si pudieras mejorar aún más tus resultados con paquetes lucrativos, nuevos y modernos cada mes?</p>
-
-<p>Hola, soy Helena Silva, del Pack Canva para Nutricionistas.</p>
-
-<p>Quiero felicitarte personalmente por la compra del producto.</p>
-
-<p>Con nuestro producto más nuevo, serás capaz de crear diseños increíbles y hacer que tus redes sociales se vean atractivas y muy bonitas...</p>
-
-<p>Y lograr que los clientes y pacientes te busquen para agendar una consulta y, además, te recomienden a otras personas para que puedas aumentar tus ingresos y ganancias.</p>
-
-<p>Tu acceso está siendo enviado a tu correo electrónico en menos de 2 minutos.</p>
-
-<p>Pero mientras tanto, necesito compartir algo muy importante contigo.</p>
-
-<p>Las nuevas clientas siempre me hacen la misma pregunta.</p>
-
-<p>Y la pregunta es:</p>
-
-<p>"Ahora que tengo la forma de hacer que mis redes sociales se vean más bonitas con estos paquetes, ¿cómo puedo mejorar aún más mis resultados con los clientes y pacientes que llegan a través de estos diseños?</p>
-<p>Bueno, pensando en eso...</p>
-
-<p>Decidí hacer una oferta exclusiva solo para nuevos clientes... y esto te ayudará a conseguir aún más clientes usando tus redes sociales, haciendo que tu agenda esté llena en los próximos 6 meses.</p>
-
-<p>**¡Paquete Nutri Arts Mensual!**</p>
-
-<p>El sistema es un protocolo simple, un paso a paso, donde descubrirás cómo conseguir más clientes utilizando nuevos diseños con palabras altamente persuasivas para que tu futuro cliente o paciente siempre diga que sí, independientemente del precio que cobres... ¡simple y rápido!</p>
-
-<p>Esto es lo que encontrarás dentro del **Paquete Nutri Arts Mensual**:</p>
-
-<p>El mayor secreto para que uses diseños con palabras persuasivas, logrando que los clientes se comprometan con tus publicaciones...</p>
-
-<p>¿Quieres aumentar el valor de cada consulta lo más rápido posible? Entonces NECESITAS conocer este "atajo" desconocido por el 99% de los nutricionistas en el mundo.<br>
-Advertencia: Tus colegas de trabajo implorarán por saber cuál es tu "secreto milagroso" que usaste para llenar tu agenda y cobrar altos precios por tu trabajo solo utilizando estos diseños mensuales.</p>
-
-<p>El nuevo secreto de las clínicas que usan internet para atender a actores, músicos y culturistas famosos, y cómo hacer lo mismo para convertirte en una referencia en el mercado.</p>
-
-<p>La gran mentira detrás de la "GUERRA DE PRECIOS BAJOS"... y por qué el 96% de los nutricionistas están perdiendo clientes por esta razón. (Ver página 7)</p>
-
-<p>El mayor "Secreto de Diseños que Convierten y Eliminan Curiosos" que hace crecer tu negocio al hacer que los clientes rueguen por un lugar en tu agenda.</p>
-
-<p>Y mucho más...</p>
-
-<p># CÓMO USAR EL BOCA A BOCA DE LA MANERA CORRECTA EN LAS REDES SOCIALES UTILIZANDO DISEÑOS...</p>
-
-<p>Son más de 100 nuevos diseños cada mes que atraerán clientes.<br>
-¡TE QUEDARÁS BOQUIABIERTO/A CON LO FÁCIL QUE ES CONSEGUIR CLIENTES EN INTERNET!</p>
-
-<p># - Consejos para aumentar la interacción de tus futuros clientes y pacientes para que puedas hacer crecer tus redes sociales prácticamente sin gastar nada...</p>
-
-<p>Mira, ahora ya conoces el camino para mejorar tus resultados y hacer un buen marketing con diseños persuasivos en internet y conseguir más clientes, ¿cierto?</p>
-
-<p>El problema es que muchos nutricionistas trabajan todo el día, además de encargarse de su hogar, y no tienen tiempo para hacer un buen marketing con diseños increíbles para su negocio.</p>
-
-<p>Y este es uno de los principales motivos por los que muchos profesionales independientes no logran expandir sus consultorios y terminan sin clientes o pacientes, con una agenda vacía.</p>
-
-<p>Pero no necesitas sufrir por esto.</p>
-
-<p>Imagina poder aumentar hasta 3 VECES tu desempeño, logrando que los pacientes rueguen por una consulta contigo... solo siguiendo un simple paso a paso aplicando estos diseños.</p>
-
-<p>¿Te imaginas no volver a preocuparte nunca más por una agenda vacía o la falta de clientes?</p>
-
-<p>... sin gastar fortunas en procedimientos burocráticos con diseñadores y marketing que ya no funcionan.</p>
-
-<p>Eso es lo que obtienes con el **Paquete Nutri Arts Mensual**.</p>
-
-<p>Normalmente, este sistema se vende por $97 al mes...</p>
-
-<p>Pero solo hoy, puedes obtener este sistema completo con un SÚPER descuento especial para nuevos clientes, por solo $6 dólares al mes.</p>
-
-<p>Esto representa un descuento de más de $200 dólares.</p>
-
-<p>Es un gran regalo de mi parte, como agradecimiento por haber confiado en mi trabajo.</p>
-
-<p>Para añadir este sistema a tu pedido hoy, solo tienes que hacer clic en el botón de abajo ahora mismo.</p>
-
-<p>Este sistema ya ha ayudado a miles de nutricionistas en todo el mundo, como Luana Rojas, que dijo...</p>
-
-<p>Luana Rojas, 37 años:<br>
-"Noté una mejora extraordinaria en mi clínica en una semana, mis colegas que también son nutricionistas no dejan de preguntarme cómo hice todo esto.”<br>
-- Helena Maria, 45 años:<br>
-"Estoy sorprendida de lo mucho que he crecido en internet usando este poderoso método para atraer más clientes, ¡lo recomiendo encarecidamente! Muchas gracias.</p>
-<p>Y muchos más clientes.</p>
-
-<p>Si aún no estás completamente seguro de que esto es perfecto para ti, asumiré todo el riesgo...</p>
-
-<p>Así funciona...</p>
-
-<p>Usa el **Paquete Nutri Arts Mensual** durante 30 días completos, y si no ves una mejora increíble en tu trabajo y un aumento de clientes y pacientes que llenan tu agenda usando los nuevos diseños cada mes...</p>
-
-<p>O si no AMAS el producto, y lo fácil que es de seguir y poner en práctica, tan simple como contar hasta 10...</p>
-
-<p>Solo tienes que enviar un correo electrónico a soporte@Helenasilva.com, y me aseguraré de devolverte cada centavo directamente a tu bolsillo lo más rápido posible.</p>
-
-<p>Y más, solo cuesta $6 dólares al mes, ¡menos que un café en la panadería!</p>
-
-<p>Y además, puedes cancelar cuando quieras y en cualquier momento.</p>
-
-<p>¿No es genial ver que no tienes nada que perder aquí?</p>
-
-<p>En el peor de los casos... ¡aún te quedas con los diseños gratis y acceso permanente... completamente GRATIS!</p>
-
-<p>Pero recuerda, esta oferta única solo está disponible en este preciso momento.</p>
-
-<p>No verás esta oferta exclusiva en ningún otro lugar, especialmente después de cerrar esta ventana.</p>
-
-<p>Todo lo que tienes que hacer es hacer clic en el botón de abajo ahora mismo...</p>
-
-<p>Y añadiremos el **Paquete Nutri Arts Mensual** a tu pedido instantáneamente.</p>
-
-<p>---</p>
-
-<!-- HOTMART - Upsell Widget -->
-<div id="box_hotmart"></div>
-<script src="https://pay.hotmart.com/assets/js/hotmart.upsell_checkout.js"></script>
-
-<script>
-opts = {
-key: 'USL-75256-206790-8c7b9f337da1f41b83b136cb9e5da06e',
-width: '650' ,
-height: '420'
-};
-Upsell.Widget.show(opts);
-</script>
-<!-- HOTMART - Upsell Widget [end] -->
-
-
-							</header>
-							<ul class="icons major">
-								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
-							</ul>
-						</div>
-					</section>
-
 			
-					</footer>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
-</html>
