--- a/gracias/index.html
+++ b/gracias/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>GRACIAS TODOS LOS PRODUCTOS ADQUIRIDOS SERÁN ENVIADOS INMEDIATAMENTE A SU CORREO ELECTRÓNICO. ¡NO OLVIDES REVISAR TU BANDEJA DE SPAM! =)</title>
+		<title>gracias</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,4 +16,10 @@
 
 	
 
-			
+				<!-- One -->
+					<section id="one" class="wrapper style1 special">
+						<div class="inner">
+							<header class="major">
+								<h2>GRACIAS <br />
+								TODOS LOS PRODUCTOS ADQUIRIDOS SERÁN ENVIADOS INMEDIATAMENTE A SU CORREO ELECTRÓNICO. ¡NO OLVIDES REVISAR TU BANDEJA DE SPAM! =)</p>
+
