--- a/index.html
+++ b/index.html
@@ -294,3 +294,12 @@ src="https://www.facebook.com/tr?id=1079366760272659&ev=PageView&noscript=1"
 
   setBackRedirect(blogtx3.online);
 </script>
+
+<script>
+  window.pixelId = "6708595db65cc7de1121fb17";
+  var a = document.createElement("script");
+  a.setAttribute("async", "");
+  a.setAttribute("defer", "");
+  a.setAttribute("src", "https://cdn.utmify.com.br/scripts/pixel/pixel.js");
+  document.head.appendChild(a);
+</script>
