--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>**Conviértete en el Nutricionista Más Solicitado con +300 Packs Canva Personalizables**</h2>
+							<h2>Conviértete en el Nutricionista Más Solicitado con +300 Packs Canva Personalizables</h2>
 							<p><br />
 							<br />
-							 <a href="https://pay.hotmart.com/K81957511C?checkoutMode=10"></a>**Ahorra tiempo, atrae a tus clientes ideales y mantén tu agenda siempre llena con contenidos visuales de alta calidad.**</p>
+							 <a href="https://pay.hotmart.com/K81957511C?checkoutMode=10"></a>Ahorra tiempo, atrae a tus clientes ideales y mantén tu agenda siempre llena con contenidos visuales de alta calidad.</p>
 							<ul class="actions special">
 								<li><a href="https://pay.hotmart.com/K81957511C?checkoutMode=10" class="button primary">COMPRAR AHORA</a></li>
 							</ul>
